# password-manager

./: .env.example  .gitignore  DESKTOP-AND-EXTENSION.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.extension.json  tsconfig.node.json  vite.extension.bg.config.ts  vite.extension.config.ts
.github/workflows/: release.yml
extension/: manifest.json  popup.html
extension/src/: Popup.tsx  background.ts  popup-main.tsx  session.ts
src/: App.tsx  QuickAddWindow.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AuthShell.tsx  ChangeMasterPasswordModal.tsx  FullPageLoader.tsx  HotkeyFirstRunModal.tsx  HotkeyRecorder.tsx  Layout.tsx  MasterPasswordPrompt.tsx  SecretField.tsx  Sidebar.tsx  TierBadge.tsx  TypeIcon.tsx  UpdateBanner.tsx
src/lib/: desktop.ts  devTest.ts  encryption.ts  generate.ts  items.ts  supabase.ts  useIdleLock.ts
src/pages/: ItemNew.tsx  ItemView.tsx  Login.tsx  QuickAdd.tsx  Settings.tsx  Signup.tsx  VaultImport.tsx  VaultList.tsx  VaultSetup.tsx  VaultUnlock.tsx
src/state/: AuthContext.tsx  ToastContext.tsx  VaultContext.tsx
